<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.shahryar.cryptoprice.viewModel.SettingsViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.SettingsFragment"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/settings"
                app:titleTextColor="@color/text_color"
                app:navigationIcon="@drawable/ic_arrow_back_24px"
                app:navigationIconTint="@color/onPrimary" />

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:id="@+id/apikeyLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp"
            android:foreground="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/api_key"
                android:textSize="18sp"
                android:textColor="@color/text_color"/>

            <EditText
                android:id="@+id/apikeyEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:enabled="false"
                android:hint="@string/api_key"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/touch_and_hold_to_edit"
                android:layout_gravity="end"/>

        </LinearLayout>

    </LinearLayout>
</layout>