<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="345dp"
    android:layout_height="115dp"
    android:background="@drawable/widget_background"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:padding="12dp">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="110dp"
        android:layout_height="match_parent">

        <!--        <ImageButton-->
        <!--            android:id="@+id/reloadButton"-->
        <!--            android:layout_width="24dp"-->
        <!--            android:layout_height="24dp"-->
        <!--            android:layout_alignParentEnd="true"-->
        <!--            android:layout_alignParentTop="true"-->
        <!--            android:src="@drawable/ic_loop_24px_2"-->
        <!--            android:tint="@color/text_alpha"-->
        <!--            android:background="@android:color/transparent"/>-->

        <TextView
            android:id="@+id/symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:textColor="@color/text_alpha"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/symbol"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:textColor="@color/text_color"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/price_difference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/price"
            android:maxLength="7"
            android:maxLines="1"
            android:text="Price"
            android:textColor="@color/text_alpha"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:maxLength="9"
            android:maxLines="1"
            android:textColor="@color/text_color"
            android:textSize="18sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="220dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/d7Container"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/d7"
                    android:textColor="@color/text_alpha"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/d7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLength="7"
                    android:singleLine="true"
                    android:textColor="@color/text_alpha"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:gravity="bottom"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/d30"
                    android:textColor="@color/text_alpha"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/d30"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLength="7"
                    android:singleLine="true"
                    android:textColor="@color/text_alpha"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout

            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/h24"
                    android:textColor="@color/text_alpha"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/h24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLength="7"
                    android:singleLine="true"
                    android:textColor="@color/text_alpha"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:gravity="bottom"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/market_cap"
                    android:textColor="@color/text_alpha"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/marketCap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textColor="@color/text_color"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>