<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="data"
            type="com.shahryar.cryptoprice.data.model.Currency" />
    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/price_card"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="10dp"
        android:foreground="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:backgroundTint="@color/item_price_card"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp">

            <TextView
                android:id="@+id/symbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/text_alpha"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:text="@{data.symbol}"/>

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:marqueeRepeatLimit="marquee_forever"
                android:ellipsize="marquee"
                android:singleLine="true"
                android:textColor="@color/text_color"
                android:layout_below="@id/symbol"
                android:text="@{data.name}"/>

            <TextView
                android:id="@+id/price_difference"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/text_alpha"
                android:layout_above="@id/price"
                android:maxLines="1"
                priceDifference="@{data.percent_change_24h}"/>

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:textSize="20sp"
                android:maxLength="9"
                android:maxLines="1"
                android:textColor="@color/text_color"
                android:text="@{@string/price_holder(data.price)}"/>

            <View
                android:id="@+id/divider"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_toEndOf="@id/price"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="30dp"
                android:background="@color/divider"/>

            <TextView
                android:id="@+id/marketCapTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/market_cap"
                android:textSize="13sp"
                android:textColor="@color/text_alpha"
                android:layout_toEndOf="@id/divider" />

            <TextView
                android:id="@+id/marketCap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:textColor="@color/text_color"
                android:layout_below="@id/marketCapTitle"
                android:layout_toEndOf="@id/divider"
                android:text="@{@string/data_market_cap(data.market_cap)}"/>

            <TextView
                android:id="@+id/d7Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d7"
                android:textSize="12sp"
                android:textColor="@color/text_alpha"
                android:layout_toEndOf="@id/d7"
                android:layout_marginStart="40dp"
                android:layout_above="@id/h24"/>

            <TextView
                android:id="@+id/h24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:textSize="17sp"
                android:singleLine="true"
                android:textColor="@color/text_color"
                android:layout_alignParentBottom="true"
                android:layout_toEndOf="@id/d7"
                android:layout_marginBottom="2dp"
                android:layout_marginStart="40dp"
                priceDifference="@{data.percent_change_7d}"/>

            <TextView
                android:id="@+id/d7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="2dp"
                android:layout_toEndOf="@id/divider"
                android:textSize="17sp"
                android:singleLine="true"
                android:textColor="@color/text_color"
                priceDifference="@{data.percent_change_30d}"/>

            <TextView
                android:id="@+id/d30Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d30"
                android:textSize="12sp"
                android:textColor="@color/text_alpha"
                android:layout_toEndOf="@id/divider"
                android:layout_above="@id/d7"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</layout>